# ai-storyboard-generator

./: README.md  pyproject.toml
examples/: create_storyboard.py
src/: __init__.py
src/storyboard/: composition_engine.py  panel_generator.py  scene_parser.py  storyboard_exporter.py
tests/: test_composition.py
