[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-storyboard-generator"
version = "1.0.0"
description = "Convert text to visual storyboards"
requires-python = ">=3.9"
authors = [{name = "Sainath Pattipati"}]
dependencies = ["langchain>=0.1.0", "openai>=0.27.0", "pydantic>=1.10.0", "reportlab>=4.0.0", "pillow>=9.0.0"]
